themes/maik-blog/assets/scss/_main.scss
/* ... */
.highlight {
    position: relative;

    &:has(table) {
        margin: 0.95em 0;
        border-radius: 8px;
        overflow: hidden;
    }

    pre {
        padding-left: 0;
        padding-right: 0;

        .line {
            padding-left: 20px;
            padding-right: 10px;
        }
    }

    code {
        display: block;
        width: max-content;
        min-width: 100%;
    }

    table {
        width: 100% !important;
        display: block;
        background: inherit;
        position: relative;
        border-radius: 0;
        font-size: inherit;

        tbody {
            display: block;

            tr {
                display: flex;
                flex-direction: row;

                td {
                    overflow-wrap: anywhere;
                    word-break: normal;
                    width: 1px; // flex will override

                    pre {
                        margin: 0;

                        @media #{$media-size-phone} {
                            white-space: pre;
                        }
                    }

                    &:first-of-type {
                        // line numbers
                        flex: 0 0 max-content;

                        .lnt {
                            padding-left: 14px;
                            padding-right: 14px;
                            margin-right: 0;
                        }
                    }

                    &:last-of-type {
                        // code
                        flex: 1 1 auto;

                        pre {
                            padding-left: 0px;
                        }
                    }
                }
            }
        }
    }

    .codeblock-copy {
        @mixin code-copy-background($color) {
            $color: "rgb(" + red($color) + "," + green($color) + "," +
                blue($color) + ")";

            background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#{$color}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-copy"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg>');
        }

        position: absolute;
        top: 10px;
        right: 10px;
        display: block;
        width: 26px;
        height: 26px;
        border: none;
        padding: 0;
        margin: 0;
        border-radius: 6px;
        background: none;
        background-color: inherit;

        @include code-copy-background(#adadad);

        background-repeat: no-repeat;
        background-position: center;
        background-size: auto 65%;

        &.current-code {
            --selected-code-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="rgb(52, 184, 0)" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check"><polyline points="20 6 9 17 4 12"></polyline></svg>');

            background-image: var(--selected-code-image);

            &:hover {
                background-image: var(--selected-code-image);
            }
        }

        &:hover {
            @include code-copy-background(#ffffff);
        }
    }
}

